# smart-bos

./: .env.example  .gitignore  README.md  SKILL.md  comply_verify_gui.py  pyproject.toml  start_verify_gui.command
.claude/: launch.json
.github/workflows/: ci.yml
BOQ/: 5.ปริมาณงาน Smart Plant P1  23-04-2569 - Copy.xlsx  5.ปริมาณงาน Smart Plant P1  23-04-2569.xlsx  build_new_sheets.py
TOR/: TOR โครงการเพิ่มประสิทธภาพโรงบำบัดน้ำเสีย Smart Plant P1  09-04-69.docx
_continuity/: STATE_20260510_111800.md
app/: __init__.py  anthropic_provider.py  catalog.py  claude_code_provider.py  continuity.py  core.py  database.py  export.py  learning.py
app/routes/: __init__.py  catalog_api.py  continuity_api.py  export_api.py
app/server/templates/: index.html  manual.html
docs/: ARCHITECTURE.md  CHANGELOG.md  MANUAL.md
knowledge_base/: KB.md  catalogs.json  pipelines.md  pitfalls.md  rect_coords.json  sections.json  sr_pattern.md
output/: Comply spec Smart Plant 1.xlsx  verification_status.json
scripts/: clone_ap2_sisters.py  clone_l3switch_522_524.py  clone_poe_l2_switch.py  fix_uv_headers.py  pdf_header.py  version.py
tests/: conftest.py  test_catalog.py  test_continuity.py  test_export.py  test_pdf_render.py  test_smoke.py
